k8s/heron.api.yml
apiVersion: v1
kind: Service
metadata:
  name: heron-api
spec:
  selector:
    app: heron-api
  ports:
    - port: 4241
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heron-api
  annotations:
    container.apparmor.security.beta.kubernetes.io/heron: runtime/default
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: heron-api
  template:
    metadata:
      labels:
        app: heron-api
    spec:
      containers:
        - name: heron
          image: ghcr.io/devcon4/heron-api:latest
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 2000
            # allowPrivilegeEscalation: false
            # privileged: false
            # readOnlyRootFilesystem: true
            capabilities:
              drop:
                - all
              add:
                - NET_BIND_SERVICE
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 8080
          #   initialDelaySeconds: 5
          #   periodSeconds: 5
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 8080
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "20m"
              memory: ".1Gi"
            limits:
              cpu: "240m"
              memory: ".25Gi"
