k8s/heron.app.yml
apiVersion: v1
kind: Service
metadata:
  name: heron-app
spec:
  selector:
    app: heron-app
  ports:
    - port: 4240
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heron-app
  annotations:
    container.apparmor.security.beta.kubernetes.io/heron: runtime/default
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: heron-app
  template:
    metadata:
      labels:
        app: heron-app
    spec:
      containers:
        - name: heron
          image: ghcr.io/devcon4/heron-app:latest
          securityContext:
            runAsNonRoot: true
            # readOnlyRootFilesystem: true
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - all
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "20m"
              memory: ".1Gi"
            limits:
              cpu: "240m"
              memory: ".25Gi"
